metallb/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: myhost
spec:
  rules:
  - host: myhost.example.com
    http:
      paths:
      - backend:
          service:
            name: nginx-test  # change as per service name
            port:
              number: 80 # change as per service port
        path: /
        pathType: ImplementationSpecific
